--- a/module5/casestudy5-angular/package.json
+++ b/module5/casestudy5-angular/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~9.0.7",
     "bootstrap": "^5.2.0-beta1",
     "rxjs": "~6.5.4",
+    "toastr": "^2.1.4",
+    "ngx-toastr": "^12.1.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -43,6 +45,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "ngx-pagination": "~5.1.1"
   }
 }
