--- a/module6_sprint2/shop-online/package.json
+++ b/module6_sprint2/shop-online/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~9.0.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^35.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
