--- a/module6_sprint2/shop-online-api/src/main/resources/application.properties
+++ b/module6_sprint2/shop-online-api/src/main/resources/application.properties
@@ -1,1 +1,46 @@
 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/shop_online?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=diep1005
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+#jwt
+jwt.secret=C0222G2Secret
+#Database
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/shop_online?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=diep1005
+#Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.properties.hibernate.show.sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.hb2dll.auto=update
+
+
+
+##jwt
+#jwt.secret=${API_JWT_SECRET_KEY}
+##Database
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=${API_DATABASE_URI}
+#spring.datasource.username=${API_DATABASE_USERNAME}
+#spring.datasource.password=${API_DATABASE_PASSWORD}
+##Hibernate
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.id.new_generator_mappings=true
+#spring.jpa.properties.hibernate.show.sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.hb2dll.auto=update
+##Mail
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=${API_EMAIL_USERNAME}
+#spring.mail.password=${API_EMAIL_PASSWORD}
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
