--- a/module6_sprint2/shop-online/package.json
+++ b/module6_sprint2/shop-online/package.json
@@ -22,6 +22,8 @@
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
+    "ngx-toastr": "^12.1.0",
+    "firebase": "^8.0.2",
     "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ckeditor/ckeditor5-build-classic": "^35.0.1"
   },
